--- a/00-spring-boot-MVC-CRUD-employees/src/main/resources/templates/employee-form.html
+++ b/00-spring-boot-MVC-CRUD-employees/src/main/resources/templates/employee-form.html
@@ -2,30 +2,34 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>Employee Form</title>
 </head>
 <body>
 
-<h3>Employee Directory</h3>
-<hr>
+    <div class="container">
+        <h3>Employee Directory</h3>
+        <hr>
 
-<form th:action="@{/employees/add}" th:object="${employee}" method="post" >
-    <h4>Employee Form</h4>
-    <br><br>
+        <form th:action="@{/employees/add}" th:object="${employee}" method="post" >
+            <h4>Employee Form</h4>
+            <br>
 
-    <input type="text" th:field="*{firstName}" placeholder="First Name"
-            class="form-control mb-4 w-25">
-    <br><br>
-    <input type="text" th:field="*{lastName}" placeholder="Last Name"
-           class="form-control mb-4 w-25">
-    <br><br>
-    <input type="text" th:field="*{email}" placeholder="Email"
-           class="form-control mb-4 w-25">
-    <br><br>
-    <button type="submit" class="btn btn-info col-2">Add Employee</button>
+            <input type="hidden" th:field="*{id}">
+            <input type="text" th:field="*{firstName}" placeholder="First Name"
+                    class="form-control mb-4 w-25">
+            <input type="text" th:field="*{lastName}" placeholder="Last Name"
+                   class="form-control mb-4 w-25">
+            <input type="text" th:field="*{email}" placeholder="Email"
+                   class="form-control mb-4 w-25">
+            <button type="submit" class="btn btn-info col-2">Add Employee</button>
 
-</form>
+        </form>
 
+        <hr>
+        <a th:href="@{/employees/list}">Back to employees list</a>
+    </div>
 
 </body>
 </html>
