--- a/00-spring-boot-MVC-CRUD-employees/src/main/resources/templates/list-employees.html
+++ b/00-spring-boot-MVC-CRUD-employees/src/main/resources/templates/list-employees.html
@@ -21,6 +21,7 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email</th>
+                <th>Action</th>
             </tr>
         </thead>
 
@@ -29,6 +30,8 @@
                 <td th:text="${emp.firstName}" />
                 <td th:text="${emp.lastName}" />
                 <td th:text="${emp.email}" />
+                <td><a th:href="@{/employees/showUpdateForm(employeeId=${emp.id})}"
+                       class="btn btn-info btn-sm">Update</a></td>
             </tr>
         </tbody>
     </table>
