--- a/00-spring-boot-MVC-CRUD-employees/src/main/resources/templates/list-employees.html
+++ b/00-spring-boot-MVC-CRUD-employees/src/main/resources/templates/list-employees.html
@@ -31,7 +31,11 @@
                 <td th:text="${emp.lastName}" />
                 <td th:text="${emp.email}" />
                 <td><a th:href="@{/employees/showUpdateForm(employeeId=${emp.id})}"
-                       class="btn btn-info btn-sm">Update</a></td>
+                       class="btn btn-info btn-sm">Update</a>
+                    <a th:href="@{/employees/deleteEmployee(employeeId=${emp.id})}"
+                       class="btn btn-danger btn-sm"
+                        onclick="if(!(confirm('Are you sure you want to delete this employee?'))) return false">Delete</a>
+                </td>
             </tr>
         </tbody>
     </table>
